--- a/bilibili-lite/src/member/base.styl
+++ b/bilibili-lite/src/member/base.styl
@@ -36,6 +36,9 @@
 .cover-v2-container .cover-v2-detail-wrp .cover-v2-selector .cover-v2-selector-deg
 .cc-modal .modal
 .share-modal .modal-bottom
+#bili-data-center
+.dc-page
+.new-link-top-wrap .new-link-top-container
   background-color var(--c-background) !important
 
 .message-notice_wrap .tips-item_wrap
@@ -74,7 +77,13 @@
 .article-danmu-wrp .danmu-box .danmu-table .danmu-item:hover
 .article-danmu-wrp .danmu-box .danmu-table .danmu-item .item-act .option-wrp .act-btn
 .recent-danmu-wrp .danmu-table .danmu-item .item-act .option-wrp .act-btn
+.dc-radio-button.is-active
+.dc-radio-button:hover
+.section-item.actived
   background-color var(--c-hover) !important
+
+#dc-section_preference .list_wrap .list-item
+  background-color: var(--c-hover)
 
 .dc-progress-bar
 #charge-wrapper .main-charge .elec-con .progress .progress-bar .bar
@@ -83,7 +92,11 @@
 .lab-item .lab-item-content .divide-line
 .line-divid
 .normal-v2-container .normal-title-wrp>.template-op>.template-op-divide
+.dc-radio-button:hover:before
   background-color var(--c-border) !important
+
+.echarts
+  background-color: var(--c-white)
 
 .carousel-module .panel .title .tag
 .comment-list-item .ci-action a:hover
@@ -128,6 +141,7 @@
 .ui-popup .popup-wrap .text-box .text
 .share-modal .modal .modal-close
 .cc-article-wrp .del-wrp .modal-wrap .del-title
+.dc-section-item1_title_custom .sectionTitle
   color var(--c-title) !important
 
 .notice_wrap .notice_body .hot-item .item-right
@@ -150,6 +164,8 @@
 .article-danmu-wrp .danmu-filter .left .delete .plain
 .article-danmu-wrp .danmu-box .danmu-table .danmu-item .item-content
 .cc-article-wrp .del-wrp .modal-wrap .del-tips
+#dc-section_essential .echarts div
+.section-item .tips_wrap
   color var(--c-text) !important
 
 .link-top-container .link-top-item.active .red_point
@@ -253,10 +269,15 @@ i.icon-shape:after
 .article-danmu-wrp .danmu-filter .left .protect .plain
 .article-danmu-wrp .danmu-filter .left .refresh .plain
 .recent-danmu-wrp .danmu-table .danmu-item .item-act .option-wrp .act-btn
+.dc-radio-button
+.dc-radio-button:hover
+#dc-section_essential .item-in-row
+.watch_wrap
   border-color var(--c-border) !important
 
 .cc-article-wrp .del-wrp .modal-wrap .geetest_holder.geetest_wind .geetest_radar_btn
 .cc-article-wrp .del-wrp .modal-wrap .geetest_holder.geetest_wind .geetest_success_btn
+.section-item.actived
   border-color var(--c-accent) !important
 
 .recent-danmu-wrp .danmu-filter .left .option-menu .option-arrow-border
@@ -266,9 +287,13 @@ i.icon-shape:after
 .upload-v2-container .upload-agreement .reg-1 .reg-2-tip::after
 .cover-v2-container .cover-v2-detail-wrp .cover-v2-selector .cover-v2-selector-deg
 .article-danmu-wrp .danmu-filter .left .option-menu .option-arrow
+.new-link-top-wrap .arrow-tip
+.bcc-popover[x-placement^=bottom] .popper__arrow
   border-bottom-color var(--c-border) !important
 
 .article-danmu-wrp .danmu-filter .left .option-menu .option-arrow-border
+.new-link-top-wrap .arrow-tip:after
+.bcc-popover[x-placement^=bottom] .popper__arrow:after
   border-bottom-color var(--c-background) !important
 
 .section-item .diff-wrp .diff-text:before
@@ -305,6 +330,8 @@ i.icon-shape:after
 .detail-wrp .detail-empty
 .article-danmu-wrp .danmu-box
 .article-danmu-wrp .danmu-box .danmu-table .danmu-item
+.dc-top-link_wrap .tabs .tabs__header
+.new-link-top-wrap .new-link-top-container
   border 0 !important
 
 .danmu-container
