--- a/bilibili-lite/src/public/comment.styl
+++ b/bilibili-lite/src/public/comment.styl
@@ -76,6 +76,7 @@
 .comment-bilibili-fold .stick.true-love .medal-level
 .list-comment
 .panel-area .bb-comment .bottom-page.center
+.reply-item
 	border-color var(--c-border) !important
 
 .comment .comment-selecotr
