--- a/bilibili-lite/src/public/feed.styl
+++ b/bilibili-lite/src/public/feed.styl
@@ -6,6 +6,8 @@
 .feed-tag .publish-panel-container
 .feed-tag .publish-panel
 .feed-tag .card
+.backdrop iframe
+.result.is-web
   background-color var(--c-background) !important
 
 .imagesbox .boost-control
@@ -13,6 +15,7 @@
 
 .video-container .text-area .title
 .feed-tag .separater-line
+.title-text
   color var(--c-title) !important
 
 .video-container .text-area .view-danmaku span
@@ -28,9 +31,16 @@
 .userinfo-wrapper .info .user .vip
 .imagesbox .boost-control li:hover span
 .imagesbox .boost-control li:hover i
+.clock-time
   color var(--c-accent) !important
 
-.article-container:hover .text-area
+.clock-time::after
+.result-list .row::after
+.prize-item .prize-img
+.backdrop .title-box
+  border-color var(--c-border) !important
+
+.text-area
   box-shadow none !important
 
 .feed-card .card .main-content
