--- a/bilibili-lite/src/v/blackboard.styl
+++ b/bilibili-lite/src/v/blackboard.styl
@@ -1,5 +1,6 @@
 /* 广场 专题 帮助 */
 .banner
+.international-footer
 .active-title .b-active-i
 .topic-title .b-topic-i
   display none !important
@@ -9,6 +10,8 @@
 .bili-share-pc .weixin-hover .qr-before
 .help-list
 .help-box
+.bili-share-pc .share-weixin-qr
+body[style]
   background-color var(--c-background) !important
 
 .help-content img
@@ -40,6 +43,7 @@
 .active-title
 .nav-tab
 .bili-share-pc
+.bili-share-pc .vertical-line
   border-color var(--c-border) !important
 
 .help-list
