--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -63,6 +63,7 @@ em:not(.icon)
 .gift-item-wrap .expiration
 .hot-label
 .mic-wrapper.media-info-card .mic-content .mic-pic label
+.h5share-container .text-area .text-content .tag
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
@@ -186,6 +187,9 @@ textarea
 .bili-dialog .con
 .video-toolbar-module .share-box .share-popup
 .video-toolbar-module .app-box .qr-code-box
+.backdrop .title-box
+.new-link-top-wrap .content-wrap
+.bcc-popover
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
