--- a/bilibili-lite/src/public/form.styl
+++ b/bilibili-lite/src/public/form.styl
@@ -17,6 +17,7 @@
 .el-date-table td.disabled div
 .el-year-table td.disabled .cell
 .el-month-table td.disabled .cell
+.checkbox
   background-color transparent !important
 
 .radio-icon.checked::before
@@ -57,6 +58,7 @@ select
 .num-content .ticket-count
 .dropbox-component
 .el-radio-button .el-radio-button__inner
+.checkbox
   border-color var(--c-border) !important
 
 .ui-radio.active .ui-radio-icon
